--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -1,5 +1,11 @@
 .background{
     background-color: #e9e9e8;
+    margin-top: 10px;
+    border-radius: 5%;
+}
+.background:hover{
+    background-color: #ffe0e0;
+    color: white;
 }
 .border-bottom{
     border-color: var(--main-color) !important;
@@ -10,10 +16,7 @@
     font-weight: 600;
     /* font-family: "Oswald", sans-serif; */
 }
-a:hover{
-    color: var(--btn-color);
-    
-}
+
 .inline{
     display: inline !important;
 }
@@ -32,47 +35,36 @@ h6{
     width: 50px;
     
 }
+.my-svg {
+    color: white;
+    
+   
+  }
 
 .green-div{
     background-color: #39535b;
-     
+    border-radius: 5%;
     color: white;
 }
 .pink-btn{
-    background-color: var(--btn-color); 
+    background-color: var(--main-color); 
+    letter-spacing: 0.09em;
+    color: white;
 }
-.filter{
-    width: 10%;
-    display: inline-block;
+.pink-btn:hover {
+    background-color: white; 
+    color: var(--main-color); 
+    border-color:var(--main-color) ;
 }
-.filter2{
-    width: 15%;
-    display: inline-block;
-}
-.rounded-side{
-    border-radius: 10px  0 5px 0;
+.pink-btn:hover img{
+    filter: invert(100%);
 }
 .rounded-image{
     border-radius: 5%;
 }
 
-.latest{
-    background-color: var(--main-background);
-}
-.allLatest p{
-    transition: all 0.3s;
-}
-.allLatest i{
-    position: relative;
-    bottom: 20px;
-    transition: all 0.3s;
-}
-.allLatest:hover i{
-    transform: translateX(5px);
-}
-.allLatest:hover p{
-    transform: translateX(-5px);
-}
+
+
 h5{
     font-family: var(--titleReciepe-font);
     font-weight: 600;
@@ -84,16 +76,47 @@ h5{
     font-size: 18px;
     color: var(--second-color);
 }
+.selected {
+    
+    background-color: #ffe0e0; 
+}
+
+.checkbox-container {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+}
+
+
 
 @media screen and (max-width: 450px) {
     .media{
         flex-direction: column;
+    }
+    
+}
+@media (min-width: 981px) and (max-width: 1500px) {
+    .small-div {
+        width: 15%;
+        margin: 1%;
+    }
+    .smaller-div{
+        width: 100%;
+    }
+    .pink-btn{
+        width: 100%;
     }
 }
 @media screen and (max-width: 1050px) {
     .img-fluid{
         width: 50px;
     }
+    .category{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
     
 }
 @media screen and (max-width: 760px) {
@@ -106,23 +129,19 @@ h5{
     .green-div{
         width: 100% !important;
     }
-    .smaller-div{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 1%;
+    .smaller-div ,.sm-div{
+        
+        width: 50%;
+        margin: auto;
        
  
      }
 }
 @media screen and (max-width: 670px) {
-    .smaller-div{
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       margin: 1%;
+    .smaller-div,.sm-div{
+       
+       width: 80%;
+       margin: auto;
       
 
     }
