--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -1,123 +1,114 @@
 <section>
-    <div class="w-50 m-auto green-div p-4" >
-       <div class="border border-light p-4">
-         <div>
-             <h1 class="text-center">All Recipes</h1>
-         </div>
-         <div>
-             <p class="text-center">Food brings us together, We make it easy to create delicious moments. Every great meal begins with a single recipe, let’s find yours!</p>
-         </div>
-       </div>
-    </div>
+    <h1 class="text-center" style="color: var(--main-color);">All Recipes</h1>
 </section>
-<section class="mt-3 mb-3 ">
-    <div class=" row d-flex justify-content-center align-items-center smaller-div">
-        <div class=" col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
+<section class="mt-3 mb-3  category">
+  <div class="row d-flex justify-content-center align-items-center smaller-div">
+      <div class="col-lg-1 p-3 col-md-6 col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('breakfast')" [class.selected]="isCategorySelected('breakfast')"  >
 
-            <img src="assets/img/croissant.png" alt="BreakFast"  class="img-fluid">
-            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">BreakFast</a>
-        </div>
-        <div class=" col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2 smaller-div d-flex flex-column  justify-content-center align-items-center">
-            <img src="assets/img/salad.png" alt="Lunch"  class="img-fluid">
-            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</a>
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 background py-2 px-5 mx-2  smaller-div d-flex flex-column  justify-content-center align-items-center">
-            <img src="assets/img/dinner.png" alt="Dinner"  class="img-fluid">
-            <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</a>
-        </div>
-        
-    </div>
+          <img src="assets/img/croissant.png" alt="Breakfast" class="img-fluid">
+          <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Breakfast</a>
+      </div>
+      <div class="col-lg-1 col-md-6 p-3   col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('lunch')" [class.selected]="isCategorySelected('lunch')" >
+          <img src="assets/img/salad.png" alt="Lunch" class="img-fluid">
+          <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Lunch</a>
+      </div>
+      <div class="col-lg-1 col-md-6 p-3  col-sm-10 background   mx-3 small-div d-flex flex-column justify-content-center align-items-center" (click)="toggleCategory('dinner')" [class.selected]="isCategorySelected('dinner')"  >
+
+          <img src="assets/img/dinner.png" alt="Dinner" class="img-fluid">
+          <a href="#" class="text-decoration-none fs-5 color p-1 m-1 align-middle">Dinner</a>
+      </div>
+  </div>
 </section>
 <section >
-    <div class="d-flex justify-content-center smaller-div w-25 m-auto">
-        <div class="d-flex flex-column justify-content-center align-items-center smaller-div m-2">
+    <div class="d-flex justify-content-center sm-div sub_category m-auto row">
+        <div class="col-lg-2 col-md-3 col-sm-10  sm-div m-1">
             <div class="dropdown d-flex flex-column" >
-                <button (click)="toggleDropdown()" class="btn pink-btn">Sub-Category 
-                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="filter">
+                <button (click)="toggleDropdown()" class="btn pink-btn  d-block ">SubCategory 
+                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block" >
                     
                 </button>
-                <div class="dropdown-content" *ngIf="dropdownOpen" >
-                  <div *ngFor="let option of options" class="background m-2">
-                    <label>
-                      <input type="checkbox" [checked]="option.selected" (change)="toggleOption(option)" />
-                      {{ option.name }}
-                    </label>
-                  </div>
-                </div>
+                
             </div>
               
-              <div>
-                <ul>
-                  <li *ngFor="let option of getSelectedOptions()">{{ option.name }}</li>
-                </ul>
-             </div>
+             
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center smaller-div  m-2">
+        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div  m-1">
             <div class="dropdown d-flex flex-column">
                 <button (click)="toggleDropdown2()" class="btn pink-btn">Ingredients
-                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="filter">
+                    <img src="assets/img/filter-svgrepo-com.svg" alt="" class="d-inline-block">
                 </button>
-                <div class="dropdown-content" *ngIf="dropdown2Open" >
-                  <div *ngFor="let option of options2" class="background m-2">
-                    <label >
-                      <input type="checkbox" [checked]="option.selected" (change)="toggleOption2(option)"  />
-                      {{ option.name }}
-                    </label>
-                  </div>
-                </div>
+                
             </div>
               
-              <div>
-                <ul>
-                  <li *ngFor="let option of getSelectedOptions2()">{{ option.name }}</li>
-                </ul>
-             </div>
+              
         </div>
-        <div class="d-flex flex-column justify-content-center align-items-center smaller-div m-2">
+        <div class=" col-lg-2 col-md-3 col-sm-10  sm-div m-1">
             <div class="dropdown d-flex flex-column">
-                <button (click)="toggleDropdown3()" class="btn pink-btn">Time
-                    <img src="assets/img/clock-two-svgrepo-com.svg" alt="" class="filter2">
+                <button (click)="toggleDropdown3()" class="btn pink-btn  d-block">Time
+                    <img src="assets/img/clock-two-svgrepo-com.svg" alt="" class="d-inline-block">
                     
                 </button>
-                <div class="dropdown-content" *ngIf="dropdown3Open">
-                  <div *ngFor="let option of options3" class="background m-2">
-                    <label>
-                      <input type="radio" [checked]="option.selected" (change)="toggleOption3(option)" />
-                      {{ option.name }}
-                    </label>
-                  </div>
-                </div>
-            </div>
-              
-              <div>
-                <ul>
-                  <li *ngFor="let option of getSelectedOptions3()">{{ option.name }}</li>
-                </ul>
-             </div>
-        </div>
-    </div>
-</section>
-<section >
-    <div class="container d-flex flex-column w-80">
-        <div class="row gx-3 mt-3">
-            <div class="col-lg-3 col-md-6 col-sm-12 white " *ngFor="let item of recipeList; let i = index">
-                <div  >
-                    <img class=" rounded-image" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
-                </div>
-                <div>
-                    <p class="red m-0">{{item.category}}</p>
-                </div>
-                <div >
-                   <h5>{{item.name}}</h5>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <div class="d-flex">
-                        <i class="fa fa-clock-o" style="font-size:24px"></i>
-                        <p class="inline-block px-2" style="color: #666;">{{item.time}} mins</p>
-                    </div>
-                </div>
                 
             </div>
         </div>
     </div>
+</section>
+<section class="mt-3 m-auto">
+  <div class="row m-auto">
+    <div class="col-lg-12 m-auto">
+      <div class="dropdown-content" *ngIf="dropdownOpen">
+        <div class="checkbox-container">
+          <div *ngFor="let option of sub_category" class="background  m-1 px-2 ">
+            <label>
+              <input type="checkbox" [checked]="option.selected" (change)="toggleOption(option)" />
+              {{ option.name }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="dropdown-content" *ngIf="dropdown3Open">
+        <div class="checkbox-container ">
+          <div *ngFor="let option of time" class="background m-1 px-2 ">
+            <label>
+              <input type="checkbox" [checked]="option.selected" (change)="toggleOption3(option)" />
+              {{ option.name }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="dropdown-content" *ngIf="dropdown2Open">
+        <div class="checkbox-container">
+          <div *ngFor="let option of ingredents" class="background  m-1 px-2 ">
+            <label>
+              <input type="checkbox" [checked]="option.selected" (change)="toggleOption2(option)" />
+              {{ option.name }}
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container d-flex flex-column w-80">
+    <div class="row gx-3 mt-3">
+      <div class="col-lg-3 col-md-6 col-sm-12 white" *ngFor="let item of getFilteredRecipes(); let i = index">
+        <div>
+          <img class="rounded-image object-fit-cover" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
+        </div>
+        <div>
+          <p class="red m-0">{{item.category}}</p>
+        </div>
+        <div>
+          <h5>{{item.name}}</h5>
+        </div>
+        <div class="d-flex justify-content-between">
+          <div class="d-flex">
+            <i class="fa fa-clock-o" style="font-size:24px"></i>
+            <p class="inline-block px-2" style="color: #666;">{{item.time}} mins</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
