--- a/front/src/app/component/public-profile/public-profile.component.html
+++ b/front/src/app/component/public-profile/public-profile.component.html
@@ -13,7 +13,9 @@
               <p class="text-secondary fs-5 bio p-2 rounded" >{{publicProfile.bio}}</p>
             </div>
         </div>
-        <div class="d-flex" *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
+
+        <div class="d-flex flex-xxl-row flex-xl-row flex-lg-row flex-md-row flex-sm-row flex-column" 
+          *ngIf="publicProfile.youtube_link || publicProfile.instagram_link || publicProfile.tiktok_link">
             <div class="title px-3 me-4 d-flex align-items-center">
               <img src="assets/imgs/link.png" alt="link" class="link-img">
               <p class="fw-bold text-capitalize fs-3 mb-0" style="font-family: var(--main-font);">
